--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
     useLibrary 'org.apache.http.legacy'
 
     compileSdkVersion 23
-    buildToolsVersion '25.0.0'
+    buildToolsVersion '23.0.2'
     signingConfigs {
         config {
 //            teabuddy.jks : teabuddy2137
@@ -16,6 +16,9 @@ android {
             keyPassword 'tea2137'
             storeFile file('teabuddy.jks')
             storePassword 'teabuddy2137'
+        }
+        dexOptions {
+                   jumboMode true
         }
     }
 
@@ -52,8 +55,6 @@ dependencies {
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.3'
     compile files('libs/gson-2.2.4.jar')
     compile 'com.makeramen:roundedimageview:1.5.0'
-    compile 'com.android.support:support-v4:19.1.0'
-    compile 'com.makeramen:roundedimageview:1.5.0'
     compile 'com.github.chrisbanes.photoview:library:1.2.4'
     //    compile project(':crossview')
     compile project(':pulltorefresh')
@@ -67,8 +68,9 @@ dependencies {
     compile 'pl.droidsonroids.gif:android-gif-drawable:1.2.7'
     compile project(':BleSensorTag')
     compile files('libs/open_sdk_r5509.jar')
-    compile files('libs/mta-sdk-1.6.2.jar')
     compile files('libs/weiboSDKCore_3.1.4.jar')
+    compile 'com.umeng.analytics:analytics:latest.integration'
+    compile files('libs/open_sdk_r5788_lite.jar')
 }
 
 
@@ -78,7 +80,7 @@ buildscript {
     }
     dependencies {
         // replace with the current version of the Android plugin
-        classpath 'com.android.tools.build:gradle:2.3.0'
+        classpath 'com.android.tools.build:gradle:1.3.+'
         // replace with the current version of the android-apt plugin
         classpath 'com.neenbedankt.gradle.plugins:android-apt:1.4'
 
