--- a/pulltorefresh/build.gradle
+++ b/pulltorefresh/build.gradle
@@ -3,7 +3,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.0'
+        classpath 'com.android.tools.build:gradle:1.3.+'
     }
 }
 apply plugin: 'com.android.library'
@@ -14,7 +14,7 @@ dependencies {
 
 android {
     compileSdkVersion 22
-    buildToolsVersion '25.0.0'
+    buildToolsVersion '23.0.2'
 
 
     sourceSets {
