--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -235,6 +235,7 @@
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:exported="true"
             android:label="@string/app_name"
+            android:theme="@android:style/Theme.Translucent"
             android:launchMode="singleTop"
             android:screenOrientation="portrait"
            />
