--- a/TeaQuinticBleUtil/src/main/AndroidManifest.xml
+++ b/TeaQuinticBleUtil/src/main/AndroidManifest.xml
@@ -15,6 +15,7 @@
         android:name="android.hardware.bluetooth_le"
         android:required="true" />
 -->
+    <uses-permission android:name="android.permission.BLUETOOTH" />
     <application
         android:allowBackup="true"
      >
