--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,8 +28,8 @@ android {
         applicationId "com.taomake.teabuddy"
         minSdkVersion 14
         targetSdkVersion 23
-        versionCode 9
-        versionName "1.6"
+        versionCode 10
+        versionName "1.7"
     }
 
     buildTypes {
@@ -61,12 +61,11 @@ dependencies {
     compile files('libs/LntsdkResourceFile.jar')
     compile files('libs/alipaySdk-20161222.jar')
     compile project(':TeaQuinticBleUtil')
-    compile 'com.tencent.mm.opensdk:wechat-sdk-android-without-mta:+'
+    compile 'com.tencent.mm.opensdk:wechat-sdk-android-without-mta:1.3.4'
     compile files('libs/jcore-android_v1.1.0.jar')
     compile files('libs/jpush-android_v3.0.1.jar')
     compile 'cn.yipianfengye.android:zxing-library:2.1'
     compile 'pl.droidsonroids.gif:android-gif-drawable:1.2.7'
-    compile files('libs/open_sdk_r5509.jar')
     compile files('libs/weiboSDKCore_3.1.4.jar')
     compile 'com.umeng.analytics:analytics:latest.integration'
     compile files('libs/open_sdk_r5788_lite.jar')
