--- a/TeaQuinticBleUtil/src/main/AndroidManifest.xml
+++ b/TeaQuinticBleUtil/src/main/AndroidManifest.xml
@@ -16,6 +16,8 @@
         android:required="true" />
 -->
     <uses-permission android:name="android.permission.BLUETOOTH" />
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
+
     <application
         android:allowBackup="true"
      >
